--- a/.env
+++ b/.env
@@ -26,3 +26,9 @@ APP_SECRET=20fdcd3ba3d85037035a0b35a22607a5
 DATABASE_URL="mysql://root:root@127.0.0.1:3306/ws_places?serverVersion=5.7"
 # DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+
+###> lexik/jwt-authentication-bundle ###
+JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
+JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
+JWT_PASSPHRASE=salut
+###< lexik/jwt-authentication-bundle ###
